force-app/main/default/objects/Liability_Judgement__c/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <formula>Judgement__r.Case_Management__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseId</label>
    <type>Text</type>
</CustomField>