force-app/main/default/objects/Liability_Judgement__c/fields/EntityAccountId__c.field-meta.xml
<CustomField>
    <fullName>EntityAccountId__c</fullName>
    <formula>Liable_Party__r.Entity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EntityAccountId</label>
    <type>Text</type>
</CustomField>