force-app/main/default/objects/Liability_Judgement__c/fields/Judgement__c.field-meta.xml
<CustomField>
    <fullName>Judgement__c</fullName>
    <label>Judgment</label>
    <referenceTo>Judgement__c</referenceTo>
    <relationshipName>Liability_Judgements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>