force-app/main/default/objects/Liability_Judgement__c/fields/Judgement_Category_1__c.field-meta.xml
<CustomField>
    <fullName>Judgement_Category_1__c</fullName>
    <label>Judgment Category 1</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>