force-app/main/default/objects/Liability_Judgement__c/fields/Judgment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Amount__c</fullName>
    <formula>Judgement__r.Judgement_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Judgment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>