force-app/main/default/objects/Liability_Judgement__c/fields/Liability_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Liability_Decision_Date__c</fullName>
    <description>Pulls the decision date down from the liability for use in flow logic</description>
    <formula>Liable_Party__r.Liability__r.Decision_Date__c</formula>
    <label>Liability_Decision_Date</label>
    <type>Date</type>
</CustomField>