force-app/main/default/objects/Liability_Judgement__c/fields/Liable_Party__c.field-meta.xml
<CustomField>
    <fullName>Liable_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Liable Party</label>
    <referenceTo>Liable_Party__c</referenceTo>
    <relationshipName>Liability_Judgements</relationshipName>
    <type>Lookup</type>
</CustomField>