force-app/main/default/objects/Liability_Judgement__c/fields/Liable_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Liable_Party_Name__c</fullName>
    <formula>Liable_Party__r.Liable_Party_Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Liable Party Name</label>
    <type>Text</type>
</CustomField>