force-app/main/default/objects/Liability_Judgement__c/fields/Penalty_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Balance_Due__c</fullName>
    <formula>Liable_Party__r.Penalty_Balance_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Penalty Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>