force-app/main/default/objects/Liability_Judgement__c/fields/Wage_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Wage_Balance_Due__c</fullName>
    <formula>Liable_Party__r.Wage_Balance_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wage Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>